--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
             <div class="confetti-icon confetti-icon--blue-circle" data-confetti-parallax="" data-speed="0.1" style="width: 10px; height: 10px; top: 92%; left: 55%;"></div>
             <div class="confetti-icon confetti-icon--red-circle" data-confetti-parallax="" data-speed="-0.2" style="width: 10px; height: 10px; top: 92%; left: 90%;"></div>
             <div class="confetti-icon confetti-icon--ring-circle" data-confetti-parallax="" data-speed="0.2" style="width: 36px; height: 36px; top: 6%; left: 22%;"></div>
-            <div class="confetti-icon confetti-icon--blue-lightning" data-confetti-parallax="" data-speed="0.3" style="width: 14px; height: 14px; top: 8%; left: 65%;"></div>
+            <div class="confetti-icon confetti-icon--blue-lightning" data-confetti-parallax="" data-speed="0.15" style="width: 14px; height: 14px; top: 8%; left: 65%;"></div>
             <div class="confetti-icon confetti-icon--blue-lightning" data-confetti-parallax="" data-speed="-0.2" style="width: 14px; height: 14px; top: 60%; left: 34%;"></div>
             <div class="confetti-icon confetti-icon--purple-ring" data-confetti-parallax="" data-speed="0.1" style="width: 14px; height: 14px; top: 86%; left: 3%;"></div>
             <div class="confetti-icon confetti-icon--purple-ring" data-confetti-parallax="" data-speed="0.1" style="width: 12px; height: 12px; top: 42%; left: 14%;"></div>
-            <div class="confetti-icon confetti-icon--purple-ring" data-confetti-parallax="" data-speed="-0.1" style="width: 12px; height: 12px; top: 42%; left: 94%;"></div>
-            <div class="confetti-icon confetti-icon--yellow-star" data-confetti-parallax="" data-speed="-0.3" style="width: 18px; height: 18px; top: 50%; left: 5%;"></div>
-            <div class="confetti-icon confetti-icon--red-star" data-confetti-parallax="" data-speed="0.2" style="width: 18px; height: 18px; top: 94%; left: 24%;"></div>
-            <div class="confetti-icon confetti-icon--red-star" data-confetti-parallax="" data-speed="-0.24" style="width: 16px; height: 16px; top: 48%; left: 86%;"></div>
+            <div class="confetti-icon confetti-icon--purple-ring" data-confetti-parallax="" data-speed="-0.5" style="width: 12px; height: 12px; top: 42%; left: 94%;"></div>
+            <div class="confetti-icon confetti-icon--yellow-star" data-confetti-parallax="" data-speed="-0.05" style="width: 18px; height: 18px; top: 50%; left: 5%;"></div>
+            <div class="confetti-icon confetti-icon--red-star" data-confetti-parallax="" data-speed="0.24" style="width: 18px; height: 18px; top: 94%; left: 24%;"></div>
+            <div class="confetti-icon confetti-icon--red-star" data-confetti-parallax="" data-speed="-0.14" style="width: 16px; height: 16px; top: 48%; left: 86%;"></div>
             <div class="confetti-icon confetti-icon--yellow-star" data-confetti-parallax="" data-speed="-0.3" style="width: 16px; height: 16px; top: 26%; left: 44%;"></div>
-            <div class="confetti-icon confetti-icon--yellow-star" data-confetti-parallax="" data-speed="-0.2" style="width: 16px; height: 16px; top: 82%; left: 56%;"></div>
-            <div class="confetti-icon confetti-icon--yellow-star" data-confetti-parallax="" data-speed="-0.2" style="width: 16px; height: 16px; top: 70%; left: 96%;"></div>
+            <div class="confetti-icon confetti-icon--yellow-star" data-confetti-parallax="" data-speed="-0.02" style="width: 16px; height: 16px; top: 82%; left: 56%;"></div>
+            <div class="confetti-icon confetti-icon--yellow-star" data-confetti-parallax="" data-speed="-0.24" style="width: 16px; height: 16px; top: 70%; left: 96%;"></div>
           </div>
         </div>
         <div class="header__container container">
@@ -333,12 +333,12 @@
         <div class="confetti">
           <div class="confetti-icon confetti-icon--blue-circle" data-confetti-parallax="" data-speed="0.2" style="width: 12px; height: 12px; top: 4%; left: 2%;"></div>
           <div class="confetti-icon confetti-icon--blue-circle" data-confetti-parallax="" data-speed="0.1" style="width: 10px; height: 10px; top: 92%; left: 55%;"></div>
-          <div class="confetti-icon confetti-icon--ring-circle" data-confetti-parallax="" data-speed="0.3" style="width: 26px; height: 26px; top: 6%; left: 80%;"></div>
+          <div class="confetti-icon confetti-icon--ring-circle" data-confetti-parallax="" data-speed="0.25" style="width: 26px; height: 26px; top: 6%; left: 80%;"></div>
           <div class="confetti-icon confetti-icon--blue-lightning" data-confetti-parallax="" data-speed="-0.2" style="width: 14px; height: 14px; top: 72%; left: 90%;"></div>
           <div class="confetti-icon confetti-icon--purple-ring" data-confetti-parallax="" data-speed="0.1" style="width: 14px; height: 14px; top: 86%; left: 3%;"></div>
           <div class="confetti-icon confetti-icon--purple-ring" data-confetti-parallax="" data-speed="0.1" style="width: 12px; height: 12px; top: 62%; left: 8%;"></div>
           <div class="confetti-icon confetti-icon--purple-ring" data-confetti-parallax="" data-speed="-0.1" style="width: 12px; height: 12px; top: 42%; left: 94%;"></div>
-          <div class="confetti-icon confetti-icon--yellow-star" data-confetti-parallax="" data-speed="-0.3" style="width: 18px; height: 18px; top: 50%; left: 5%;"></div>
+          <div class="confetti-icon confetti-icon--yellow-star" data-confetti-parallax="" data-speed="-0.07" style="width: 18px; height: 18px; top: 50%; left: 5%;"></div>
           <div class="confetti-icon confetti-icon--red-star" data-confetti-parallax="" data-speed="0.2" style="width: 18px; height: 18px; top: 94%; left: 24%;"></div>
           <div class="confetti-icon confetti-icon--red-star" data-confetti-parallax="" data-speed="-0.24" style="width: 16px; height: 16px; top: 48%; left: 86%;"></div>
           <div class="confetti-icon confetti-icon--yellow-star" data-confetti-parallax="" data-speed="-0.3" style="width: 16px; height: 16px; top: 26%; left: 44%;"></div>
@@ -477,22 +477,22 @@
           </div>
           <div class="reviews-section__counter counter">
             <div class="counter__title">WANT сэкономил для своих клиентов</div>
-            <div class="counter__digits">
+            <div class="counter__digits" data-saving-counter="">
               <div class="counter__digit">
-                <div class="counter__digit-value">05</div>
+                <div class="counter__digit-value" data-saving-counter-weeks-value="">04</div>
+                <div class="counter__digit-text">недель</div>
+              </div>
+              <div class="counter__digit">
+                <div class="counter__digit-value" data-saving-counter-days-value="">05</div>
                 <div class="counter__digit-text">дней</div>
               </div>
               <div class="counter__digit">
-                <div class="counter__digit-value">12</div>
+                <div class="counter__digit-value" data-saving-counter-hours-value="">12</div>
                 <div class="counter__digit-text">часов</div>
               </div>
               <div class="counter__digit">
-                <div class="counter__digit-value">34</div>
+                <div class="counter__digit-value" data-saving-counter-minutes-value="">34</div>
                 <div class="counter__digit-text">минуты</div>
-              </div>
-              <div class="counter__digit">
-                <div class="counter__digit-value">46</div>
-                <div class="counter__digit-text">секунд</div>
               </div>
             </div>
           </div>
