--- a/index.html
+++ b/index.html
@@ -175,12 +175,6 @@
                 </div>
                 <div class="partners-slider__slide swiper-slide">
                   <div class="partner-logo">
-                    <div class="partner-logo__image"><img src="assets/partners/logos/burger_king.jpg" width="90" height="90" alt="Burger King"></div>
-                    <div class="partner-logo__name">Burger King</div>
-                  </div>
-                </div>
-                <div class="partners-slider__slide swiper-slide">
-                  <div class="partner-logo">
                     <div class="partner-logo__image"><img src="assets/partners/logos/buyabes.jpg" width="100" height="100" alt="Буйабес"></div>
                     <div class="partner-logo__name">Буйабес</div>
                   </div>
@@ -303,12 +297,6 @@
                   <div class="partner-logo">
                     <div class="partner-logo__image"><img src="assets/partners/logos/market.jpg" width="120" height="120" alt="Маркет"></div>
                     <div class="partner-logo__name">Маркет</div>
-                  </div>
-                </div>
-                <div class="partners-slider__slide swiper-slide">
-                  <div class="partner-logo">
-                    <div class="partner-logo__image"><img src="assets/partners/logos/mcdonalds.jpg" width="120" height="120" alt="Макдональдс"></div>
-                    <div class="partner-logo__name">Макдональдс</div>
                   </div>
                 </div>
                 <div class="partners-slider__slide swiper-slide">
@@ -445,7 +433,7 @@
                 </div>
                 <div class="partners-slider__slide swiper-slide">
                   <div class="partner-logo">
-                    <div class="partner-logo__image"><img src="assets/partners/logos/ulime.jpg" width="100" height="100" alt="uLime"></div>
+                    <div class="partner-logo__image"><img src="assets/partners/logos/ulime.png" width="100" height="100" alt="uLime"></div>
                     <div class="partner-logo__name">uLime</div>
                   </div>
                 </div>
