--- a/index.html
+++ b/index.html
@@ -668,18 +668,23 @@
     </main>
     <footer class="footer">
       <div class="footer__container container">
-        <p class="footer__copy">&copy; 2016 WANT</p>
-        <div class="footer__share">
-          <div class="footer__share-title">Поделиться с&nbsp;друзьями</div>
-          <div class="footer__share-content">
-            <div class="likely">
-              <div class="facebook" data-url="http://want.ru/">Нравится</div>
-              <div class="twitter" data-url="http://want.ru">Твитнуть</div>
-              <div class="vkontakte" data-url="http://want.ru">Поделиться</div>
+        <div class="footer__col footer__col--left">
+          <p class="footer__copy">&copy; 2016 WANT</p>
+          <nav class="footer__nav"><a class="footer__nav-link" href="/privacy-policy.html" title="Политика конфиденциальности">Политика конфиденциальности</a></nav>
+        </div>
+        <div class="footer__col footer__col--right">
+          <div class="footer__share">
+            <div class="footer__share-title">Поделиться с&nbsp;друзьями</div>
+            <div class="footer__share-content">
+              <div class="likely">
+                <div class="facebook" data-url="http://want.ru/">Нравится</div>
+                <div class="twitter" data-url="http://want.ru">Твитнуть</div>
+                <div class="vkontakte" data-url="http://want.ru">Поделиться</div>
+              </div>
             </div>
           </div>
+          <div class="footer__dev"><a class="footer__dev-link" href="http://genue.ru/" title="Сделано в студии Genue">Сделано в студии Genue</a></div>
         </div>
-        <div class="footer__dev"><a class="footer__dev-link" href="http://genue.ru/" title="Сделано в студии Genue">Сделано в студии Genue</a></div>
       </div>
     </footer>
     <div class="blinger-arrow-connector">
