--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -171,7 +171,7 @@
       <div class="footer__container container">
         <div class="footer__col footer__col--left">
           <p class="footer__copy">&copy; 2016 WANT</p>
-          <nav class="footer__nav"><a class="footer__nav-link" href="/privacy-policy.html" title="Политика конфиденциальности">Политика конфиденциальности</a></nav>
+          <nav class="footer__nav"><a class="footer__nav-link" href="privacy-policy.html" title="Политика конфиденциальности">Политика конфиденциальности</a></nav>
         </div>
         <div class="footer__col footer__col--right">
           <div class="footer__share">
