--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -77,7 +77,7 @@
                       </g>
                     </svg><span class="logo__text">WANT</span></span></div>
                 <h1 class="header__title">Попробуй <span class="header__title-accent">бесплатный <span class="text--nowrap">консьерж-сервис</span></span> с&nbsp;товарами и&nbsp;услугами в&nbsp;Москве</h1>
-                <div class="header__app-stores app-stores"><a class="app-store app-store--apple" href="https://itunes.apple.com/ru/app/want/id1139464551?l=en&amp;mt=8" title="Скачать в App Store"><img class="app-store__img" src="assets/app-stores/apple-store_white.svg" width="135" height="40" alt="Скачать в App Store"></a></div>
+                <div class="header__app-stores app-stores"><a class="app-store app-store--apple" href="https://itunes.apple.com/ru/app/want/id1139464551?l=en&amp;mt=8" title="Скачать в App Store"><img class="app-store__img" src="assets/apple-store.svg" width="135" height="40" alt="Скачать в App Store"></a></div>
               </div>
             </div>
             <div class="header__table-cell">
