--- a/index.html
+++ b/index.html
@@ -555,15 +555,11 @@
                       <svg class="svgicon__symbol">
                         <use xlink:href="#icon-messenger-circle"></use>
                       </svg></span>
-                    <div class="visually--hidden">Messenger</div></a><a class="footer__social-item" href="#" title="Facebook"><span class="svgicon">
+                    <div class="visually--hidden">Messenger</div></a><a class="footer__social-item" href="https://www.facebook.com/want.msk/" title="Facebook"><span class="svgicon">
                       <svg class="svgicon__symbol">
                         <use xlink:href="#icon-facebook-circle"></use>
                       </svg></span>
-                    <div class="visually--hidden">Facebook</div></a><a class="footer__social-item" href="#" title="Vkontakte"><span class="svgicon">
-                      <svg class="svgicon__symbol">
-                        <use xlink:href="#icon-vkontakte-circle"></use>
-                      </svg></span>
-                    <div class="visually--hidden">Vkontakte</div></a></div>
+                    <div class="visually--hidden">Facebook</div></a></div>
               </div>
             </div>
             <div class="footer__col footer__col--right">
