--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
             </div>
           </div>
           <div class="download-section__content">
-            <div class="download-section__title">Покупай с&nbsp;WANT!</div>
+            <div class="download-section__title">WANT&nbsp;&mdash; мы&nbsp;исполним ваши желания!</div>
             <div class="download-section__text">Скачай приложение прямо сейчас!</div>
             <div class="download-section__app-stores app-stores"><a class="app-store app-store--apple" href="https://itunes.apple.com/ru/app/want/id1139464551?l=en&amp;mt=8" title="Скачать в App Store"><img class="app-store__img" src="assets/apple-store.svg" width="135" height="40" alt="Скачать в App Store"></a></div>
           </div>
