--- a/success.html
+++ b/success.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>WANT - Первая онлайн-витрина товаров и услуг для жителей Москвы</title>
+    <title>WANT - Сервис личных помощников</title>
     <meta name="keywords" content="WANT">
-    <meta name="description" content="WANT - Первая онлайн-витрина товаров и услуг для жителей Москвы">
+    <meta name="description" content="WANT - Сервис личных помощников">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta property="og:site_name" content="WANT">
     <meta property="og:url" content="http://want.ru">
     <meta property="og:title" content="WANT">
-    <meta property="og:description" content="WANT - Первая онлайн-витрина товаров и услуг для жителей Москвы">
+    <meta property="og:description" content="WANT - Сервис личных помощников">
     <meta property="og:image" content="http://want.ru/assets/logo_share.jpg">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
